--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   transition: all 400ms;
 }
-
 .box {
   position: relative;
   background: var(--img) center center;
@@ -128,7 +127,6 @@ input {
 .box:hover .image-button {
   opacity: 1;
 }
-/* style.css */
 
 /* Стили для разворачивающегося окошка */
 .image-options-container {
@@ -138,10 +136,15 @@ input {
   cursor: pointer;
   opacity: 0.75; /* Прозрачность окошка */
   transition: opacity 0.3s ease; /* Анимация изменения прозрачности */
-  display: none; /* По умолчанию окошко скрыто */
 }
 
 /* При наведении окошко становится полностью видимым */
 .box:hover .image-options-container {
-  display: block;
+  opacity: 1;
+}
+
+/* Стиль для option в select (если нужно изменить его внешний вид) */
+.image-options option {
+  background-color: #fff;
+  color: #000;
 }
